sadded styles to rest of the sections

--- a/HW_10/index.html
+++ b/HW_10/index.html
@@ -59,7 +59,7 @@
                     a few perfect gift options.
                 </p>
                 <a class="regular-button orange-border-button" href="#">Learn More</a>
-            </div>
+                </div>
         </section>
         <section class="gifts-all-occasions background-container">
             <div class="container">
@@ -108,54 +108,56 @@
                 </ul>
             </div>
         </section>
-        <section class="background-container get-started-section">
-            <div>
-                <h2>Ready to get started?</h2>
-                <p>Sign up or contact us</p>
-            </div>
-            <div>
-                <a href="#">
-                    Find gift now
-                </a>
-                <a href="#">
-                    How it works
-                </a>
+        <section class="background-container background-color-container">
+            <div class="get-started-section">
+                <div class="get-started-left-content-part">
+                    <h2 class="get-started-left-content bold-font-container">Ready to get started?</h2>
+                    <p class="get-started-left-content">Sign up or contact us</p>
+                </div>
+                <div class="get-started-links">
+                    <a class="regular-button override-button-left-link-container" href="#">
+                        Find gift now
+                    </a>
+                    <a class="regular-button override-button-right-link-container" href="#">
+                        How it works
+                    </a>
+                </div>
             </div>
         </section>
-        <section>
-            <h2>Our Best Blogs Ever</h2>
-            <p>
-                “Try our blog to find the best
-                tips and tricks to select your gift”
-            </p>
-            <div>
-                <figure>
+        <section class="best-blogs-ever background-container">
+            <div class="container">
+                <h2 class="center-text-container best-blogs-ever-header">Our Best Blogs Ever</h2>
+                <p class="center-text-container best-blogs-ever-paragraph">
+                    “Try our blog to find the best
+                    tips and tricks to select your gift”
+                </p>
+                <figure class="black-card-with-img">
                     <img src="imgs/couple2.png" alt="couple2">
                     <figcaption>
-                        <span>Mr. John Doe</span><br>
-                        <quote>The best way to wish your wife</quote>
-                        <a href="#">Read More</a>
+                        <span class="black-card-white-text-container">Mr. John Doe</span><br>
+                        <quote class="black-card-white-text-container black-card-quote">The best way to wish your wife</quote><br>
+                        <a class="black-card-white-text-container black-card-link" href="#">Read More</a>
                     </figcaption>
                 </figure>
-            </div>
-            <div>
-                <div>
-                    <h3>Database to find the gifts for your girlfriend</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore...
-                    </p>
-                    <a href="#">Read More</a>
-                </div>
-                <div>
-                    <h3>
-                        How Artificial Intelligence read your mind to find the best gift
-                    </h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod tempor incididunt ut labore et dolore...
-                    </p>
-                    <a href="#">Read More</a>
+                <div class="bottom-content">
+                    <div class="left-bottom-content">
+                        <h3 class="bottom-content-margin-container">Database to find the gifts for your girlfriend</h3>
+                        <p class="bottom-content-margin-container"> 
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore...
+                        </p>
+                        <a href="#">Read More</a>
+                    </div>
+                    <div class="right-bottom-content">
+                        <h3 class="bottom-content-margin-container">
+                            How Artificial Intelligence read your mind to find the best gift
+                        </h3>
+                        <p class="bottom-content-margin-container">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore...
+                        </p>
+                        <a href="#">Read More</a>
+                    </div>
                 </div>
             </div>
         </section>
