added styes to footer

--- a/HW_10/index.html
+++ b/HW_10/index.html
@@ -128,19 +128,19 @@
             <div class="container">
                 <h2 class="center-text-container best-blogs-ever-header">Our Best Blogs Ever</h2>
                 <p class="center-text-container best-blogs-ever-paragraph">
-                    “Try our blog to find the best
-                    tips and tricks to select your gift”
+                    Try our blog to find the best
+                    tips and tricks to select your gift
                 </p>
                 <figure class="black-card-with-img">
                     <img src="imgs/couple2.png" alt="couple2">
                     <figcaption>
-                        <span class="black-card-white-text-container">Mr. John Doe</span><br>
-                        <quote class="black-card-white-text-container black-card-quote">The best way to wish your wife</quote><br>
+                        <span class="black-card-white-text-container black-card-name">Mr. John Doe</span><br>
+                        <quote class="black-card-white-text-container black-card-quote">The best way to wish<br> your wife</quote><br>
                         <a class="black-card-white-text-container black-card-link" href="#">Read More</a>
                     </figcaption>
                 </figure>
                 <div class="bottom-content">
-                    <div class="left-bottom-content">
+                    <div class="left-bottom-content bottom-content-header-and-paragraph">
                         <h3 class="bottom-content-margin-container">Database to find the gifts for your girlfriend</h3>
                         <p class="bottom-content-margin-container"> 
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -148,7 +148,7 @@
                         </p>
                         <a href="#">Read More</a>
                     </div>
-                    <div class="right-bottom-content">
+                    <div class="bottom-content-header-and-paragraph">
                         <h3 class="bottom-content-margin-container">
                             How Artificial Intelligence read your mind to find the best gift
                         </h3>
@@ -162,8 +162,8 @@
             </div>
         </section>
         <footer>
-            <section>
-                <nav>
+            <section class="background-container">
+                <nav class="footer-nav-bar">
                     <ul>
                         <li>
                             <a href="#">Home</a>
