finished footer stylinig

--- a/HW_10/index.html
+++ b/HW_10/index.html
@@ -183,8 +183,8 @@
                     </ul>
                 </nav>
             </section>
-            <section>
-                <ul>
+            <section class="background-container">
+                <ul class="social-medias">
                     <li>
                         <a href="#">
                             <svg width="40" height="40" viewBox="0 0 40 40" fill="none"
@@ -271,8 +271,10 @@
                         </a>
                     </li>
                 </ul>
-                <p>© 2010 — 2020</p>
-                <p>Privacy — Terms</p>
+                <div class="footer-privacy-terms">
+                    <p class="center-text-container years">© 2010 — 2020</p>
+                    <p class="center-text-container">Privacy — Terms</p>
+                </div>
             </section>
         </footer>
     </main>
