added grid styles

--- a/HW_13/index.html
+++ b/HW_13/index.html
@@ -21,7 +21,7 @@
                 suitable
                 for your health
             </p>
-            <ul class="section-list">
+            <ul class="section-list gridServiceContainer">
                 <li>
                     <a href="/searchDoctor">
                         <div>
@@ -108,7 +108,7 @@
                     Try our web app to find the
                     best gifts for all occasions
                 </p>
-                <ul>
+                <ul class="gridAllOccasionsContainer">
                     <li>
                         <figure>
                             <img src="imgs/birthday.png" alt="birthday">
